--- a/test.htm
+++ b/test.htm
@@ -33,6 +33,12 @@ body {padding : 0; margin: 0;}
     <label> Update Graph : 
     <button id="gUpdate" onclick="onGraphUpdate(this.id)">True</button>
     </label>
-    <canvas id="chart" style="position: absolute; top: 650px; left: 300px; height: 300px;width: 800px;"></canvas    >
+    <canvas id="chart" style="position: absolute; top: 650px; left: 300px; height: 300px;width: 800px;">
+    </canvas>
+        <div id="RadioDiv" style="position: relative; top: 650px; left: 1150px;">
+        <input type="radio" id="objects">
+        <label>Objects</label>
+        <br><br>
+    </div>
 </body>
 </html>
