--- a/test.htm
+++ b/test.htm
@@ -28,7 +28,7 @@ body {padding : 0; margin: 0;}
     </label>
     <label>
         G  : 
-        <input type="text" id="g_" value="0.8"></input>
+        <input type="text" id="g_" value="0"></input>
     </label>
     <label> Update Graph : 
     <button id="gUpdate" onclick="onGraphUpdate(this.id)">True</button>
@@ -36,7 +36,7 @@ body {padding : 0; margin: 0;}
     <canvas id="chart" style="position: absolute; top: 650px; left: 300px; height: 300px;width: 800px;">
     </canvas>
         <div id="RadioDiv" style="position: relative; top: 650px; left: 1150px;">
-        <input type="radio" id="objects">
+        <input type="radio" name="radioInp" onchange="radioChange(this)" id="objects">
         <label>Objects</label>
         <br><br>
     </div>
