--- a/test.htm
+++ b/test.htm
@@ -10,7 +10,9 @@
         position: relative;
         left: 20px;
         top: 10px;
-        padding: 5px;
+        padding: 5px 10px;
+        margin: 5px 5px;
+        display: inline-block;
     }
     </style>
     <body>
