--- a/test.htm
+++ b/test.htm
@@ -27,6 +27,7 @@
         <button class="relative" id="button" onclick="addObj()">Add Object</button>
         <button class="relative" id="start" onclick="start()">Start</button>
         <button class="relative" id="reset" onclick="reset()">Reset</button>
+        <button class="relative" id="reset" onclick="normalize_all()">Normalize All</button>
 
         <label style="position:absolute; top: 50px; left: 1120px;">
             Restitution : 
