--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <html>
     <title>Test</title>
     <head>
-        <meta charset="UTF-8"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <style>
     body {padding : 0; margin: 0;}
