--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         margin: 5px 5px;
         display: inline-block;
     }
+    div.obj{
+        position: relative;
+        height: 300px;
+        width: 280px;
+        left: 20px;
+    }
     </style>
     <body>
         <script language="javascript" type="text/javascript" src="matter.js"></script>
