--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         width: 280px;
         left: 20px;
     }
+    button.obj{
+        position: relative;
+        padding: 5px;
+        margin: 5px;
+        display: inline-block;
+    }
     </style>
     <body>
         <script language="javascript" type="text/javascript" src="matter.js"></script>
