--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <button class="relative" id="reset" style="background-color:rgba(245, 95, 95, 0.845)" onclick="reset()">Reset</button>
     <button class="relative" id="reset" onclick="normalize_all()">Normalize All</button>
 
-    <label style="position:absolute; top: 50px; left: 1120px;">
+    <label style="position:relative; left: 770px; top:50px;">
         Restitution : 
         <input type="text" id="rest_inp" value="0.6"></input>
     </label>
-    <label style="position:absolute; top: 100px; left: 1120px;">
+    <label style="position:relative; left: 530px; top:100px;">
         g (1=9.8)  : 
         <input type="text" id="g_" value="0"></input>
     </label>
