--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             g (1=9.8)  : 
             <input type="text" id="g_" value="0"></input>
         </p>
-        <select id="gpl" onchange="gravityChanged()">
+        <select style="font-size: 15px;" id="gpl" onchange="gravityChanged()">
             <option value="Earth">Earth</option>
             <option value="Moon">Moon</option>
             <option value="Mars">Mars</option>
