--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://cdn.iconscout.com/icon/free/png-512/collision-spark-cracker-boom-comic-38838.png">
     <script language="javascript" type="text/javascript" src="matter.js"></script>
     <script language="javascript" type="text/javascript" src="test.js"></script>
     <script language="javascript" type="text/javascript" src="p5.js"></script>
