--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </div>
 
     <div class="rEL">
+        <a href="collision.html" class="lrEL">
+            Click Here For Info And Examples
+        </a>
         <p class="lrEL">
             Restitution : 
             <input type="text" id="rest_inp" value="0.6"></input>
