--- a/collision.html
+++ b/collision.html
@@ -9,7 +9,8 @@
         <button class="tablinks" onclick="Change(event, 'EL')" id="defaultOpen">Elastic</button>
         <button class="tablinks" onclick="Change(event, 'IEL')">Inelastic</button>  
         <button class="tablinks" onclick="Change(event, 'PIEL')">Partially Inelastic</button>
-      </div>
+    </div>
+
 <div id="EL" class="tabcontent">
     <div class="ed1">
         <h1 style="text-decoration: underline; font-weight: bold;">
@@ -45,10 +46,20 @@
 
 <div id="PIEL" class="tabcontent">
     <div class="ed1">
-
+        <h1 style="text-decoration: underline; font-weight: bold;">
+            Partially Inelastic Collision
+        </h1>
+        <h2>
+            In real world with exceptions of very few , all the collisions are of this type. In partially inelastic collision
+            the body's kinetic energy gets reduced by a certain amount. This quantity
+            which defines this amount is known as coefficient of restitution. It decides what part of energy the colliding body will 
+            give to another body.
+        </h2>
     </div>
     <div class="ed2">
-        
+        <img src="https://uken.zendesk.com/hc/article_attachments/360011132271/new8ball1.gif" width="350" style="margin-top: 100px;" class="rotate90">
+        <br>
+        <img src="https://media.giphy.com/media/kyRhs8taQA6tGGwd0q/giphy.gif" width="350" style="margin-top: 150px;">
     </div>
 </div>
    
