--- a/collision.html
+++ b/collision.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <script src="collision.js"></script>
+    <script language="javascript" type="text/javascript" src="matter.js"></script>
+    <script language="javascript" type="text/javascript" src="p5.js"></script>
+    <script language="javascript" type="text/javascript" src="Box.js"></script>
     <link rel="stylesheet" href="collision.css">
 </head>
 <body>
