--- a/collision.html
+++ b/collision.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="collision.js"></script>
+    <meta charset="UTF-8">
     <script language="javascript" type="text/javascript" src="matter.js"></script>
     <script language="javascript" type="text/javascript" src="p5.js"></script>
-    <script language="javascript" type="text/javascript" src="Box.js"></script>
+    <script language="javascript" type="text/javascript" src="Box_Collision.js"></script>
+    <script language="javascript" type="text/javascript" src="collision.js"></script>
     <link rel="stylesheet" href="collision.css">
 </head>
 <body>
@@ -65,7 +66,9 @@
         <img src="https://media.giphy.com/media/kyRhs8taQA6tGGwd0q/giphy.gif" width="350" style="margin-top: 150px;">
     </div>
 </div>
-   
+<main style="padding: 20px; height: 600px;">
+
+</main>
 </body>
 </html> 
 
