--- a/collision.html
+++ b/collision.html
@@ -28,6 +28,14 @@
     <div class="ed2">
         <img style="padding: 20px;" src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Translational_motion.gif" width="300">
     </div>
+    <div class="controls" style="position: absolute; top: 500px; left: 50px; font-size: 25px;">
+        <label>Enter n : </label>
+        <input type="text" onchange="n_changed()" id="n_inp">
+        <br>
+        <br>    
+        <label>Rotation : </label>
+        <input type="checkbox" id="r_inp" onchange="rotate_changed(this)">
+    </div>
 </div>
 
 <div id="IEL" class="tabcontent">
