--- a/collision.html
+++ b/collision.html
@@ -77,6 +77,15 @@
         <br>
         <img src="https://media.giphy.com/media/kyRhs8taQA6tGGwd0q/giphy.gif" width="350" style="margin-top: 150px;">
     </div>
+    <div class="controls" style="position: absolute; top: 600px; left: 50px; font-size: 25px;">
+        <label>Restitution : </label>
+        <input type="text" onchange="rest_changed()" id="rest_inp">
+        <br>
+        <br>    
+        <label>Rotation : </label>
+        <input type="checkbox" id="r_inp" onchange="rotate_changed(this)">
+    </div>
+    </div>
 </div>
 <main style="padding: 20px; position: relative; top:50px">
 
