--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <option value="Mars">Mars</option>
           </select>
         <br>
-        <p class="lrEL" id="rotate">
+        <p class="lrEL" id="rotation">
             Rotation : 
             <input type="checkbox" id="r_con" onchange="rotateChanged(this)"/>
         </p> 
