--- a/index.html
+++ b/index.html
@@ -46,7 +46,29 @@
         <p class="lrEL" id="rotation">
             Rotation : 
             <input type="checkbox" id="r_con" onchange="rotateChanged(this)"/>
-        </p> 
+        </p>
+        <br>
+        <p class="rOC" id="lastClick">
+            Last Clicked : 
+        </p>
+        <p class="rOC" id="shapeChange">
+            Shape : 
+            <select style="font-size: 15px;" id="sh_inp" onchange="shapeChanged()">
+                <option value="Circle">Circle</option>
+                <option value="Rect">Rect</option>
+              </select>
+        </p>
+        <p class="rOC">
+            Size : 
+            <br>
+            <input id="slider" style="width: 100%;" type="range" min="10" max="50" step="5" value="20" oninput="sizeChanged(this.value)"/> 
+            <label id="sliderVal">
+
+            </label>
+        </p>
+        <p id="sizeShow" class="rOC">
+            Current Value : 20
+        </p>
         <p style="position:absolute; bottom: 10px;"> Update Graph : 
         <button id="gUpdate" onclick="onGraphUpdate(this.id)">False</button>
         </p>
