--- a/collision.html
+++ b/collision.html
@@ -6,7 +6,7 @@
     <script language="javascript" type="text/javascript" src="p5.js"></script>
     <script language="javascript" type="text/javascript" src="Box_Collision.js" ></script>
     <link rel="stylesheet" href="collision.css">
-    <script language="javascript" type="text/javascript" src="collision.js"></script>
+    <script language="javascript" type="text/javascript" src="collision.js" defer></script>
 </head>
 <body>
     <div class="tab">
