--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </a>
         <p class="lrEL">
             Restitution : 
-            <input type="text" id="rest_inp" value="0.6"></input>
+            <input type="text" id="rest_inp" value="0.6" onchange="restChanged(this)"></input>
         </p>
         <br>
         <p class="lrEL">
